sql: [#2338] Disable warnings on `sqlite` component.
	src/lib/sqlite
	* CMakeLists.txt: Disable all warnings.

--- a/src/lib/sqlite/CMakeLists.txt
+++ b/src/lib/sqlite/CMakeLists.txt
@@ -28,5 +28,7 @@ configure_file(config.h.cmake src/sqliteConfig.h)
 
 add_definitions(-Wno-pointer-sign -Wno-error)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")
+
 add_subdirectory(tool)
 add_subdirectory(src)
